[metadata]
name = bdfrz
description_file = README.md
description_content_type = text/markdown
home_page = https://github.com/Rootkit-/bdfrz
keywords = reddit, download, archive
version = 2.5.2
author = Hoe
author_email =hoe@hoe
license = GPLv3
classifiers = 
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Natural Language :: English
    Environment :: Console
    Operating System :: OS Independent
platforms = any

[files]
packages = bdfrz
